# SARAL

./: .gitignore  AUTH_DISABLED_CHANGES.md  CHANGELOGS.md  CONTRIBUTING.md  POSTER_IMPLEMENTATION.md  README.md  SETUP.md  environment.yml  instructions.md  llms.md  package-lock.json  standalone_ppt_generator.py  try.py
backend/: .env.example  ARCHITECTURE.md  AUTH_ENDPOINTS.md  HAND_ASSETS_README.md  Procfile.dev  README_PDF_PROCESSOR.md  README_WHITEBOARD.md  ROUTES.md  WHITEBOARD_IMPLEMENTATION.md  check_dependencies.sh  check_gpu.py  check_gpu.sh  docker-compose.yml  environment.yml  podcast_dialogue.txt  pyproject.toml  requirements.txt  start_workers.sh  stop_workers.sh  test.py
backend/Saral API Collection/: opencollection.yml
backend/Saral API Collection/Auth/: Auth - Email Sign In.yml  Auth - Email Sign Up.yml  Auth - Firebase Login.yml  Auth - Forgot Password.yml  Auth - Google OAuth.yml  Auth - Logout.yml  Auth - Me.yml  Auth - Providers.yml  Auth - Reset Password.yml  Auth - Verify Token.yml
backend/Saral API Collection/Misc/: Health.yml  Papers - Ingest from ArXiv.yml  Webhook - Worker Update.yml  folder.bru
backend/Saral API Collection/Paper to Business Brief/: BusinessBrief - Download PDF.yml  BusinessBrief - Generate.yml  BusinessBrief - Get.yml  BusinessBrief - SSE Stream.yml  BusinessBrief - Update.yml  folder.bru
backend/Saral API Collection/Paper to Podcast/: PaperToPodcast - Download Audio.yml  PaperToPodcast - Download Package.yml  PaperToPodcast - Download as Video.yml  PaperToPodcast - Get Run Status.yml  PaperToPodcast - Get Script.yml  PaperToPodcast - Retry Run.yml  PaperToPodcast - SSE Stream.yml  PaperToPodcast - Start.yml  folder.bru
backend/Saral API Collection/Paper to Poster/: PaperToPoster - Confirm.yml  PaperToPoster - Download.yml  PaperToPoster - Get Content.yml  PaperToPoster - Get Run Status.yml  PaperToPoster - Retry Run.yml  PaperToPoster - SSE Stream.yml  PaperToPoster - Start.yml  folder.bru
backend/Saral API Collection/Paper to Reel/: PaperToReel - Download Reel.yml  PaperToReel - Finalize.yml  PaperToReel - Get Avatars.yml  PaperToReel - Get Run Status.yml  PaperToReel - Get Script.yml  PaperToReel - Retry Run.yml  PaperToReel - SSE Stream.yml  PaperToReel - Select Avatar.yml  PaperToReel - Start.yml  PaperToReel - Stream Reel.yml  PaperToReel - Update Script.yml  folder.bru
backend/Saral API Collection/Paper to Slides/: PaperToSlides - Assign Images.yml  PaperToSlides - Confirm.yml  PaperToSlides - Get Deck URLs.yml  PaperToSlides - Get Images.yml  PaperToSlides - Get Run Status.yml  PaperToSlides - Get Script.yml  PaperToSlides - Get Slides PDF.yml  PaperToSlides - SSE Stream.yml  PaperToSlides - Start.yml  PaperToSlides - Update Script.yml  PaperToSlides - Upload Template.yml  folder.bru
backend/Saral API Collection/Paper to Video/: PaperToVideo - Assign Images.yml  PaperToVideo - Confirm Script.yml  PaperToVideo - Download Video.yml  PaperToVideo - Generate Video.yml  PaperToVideo - Get Audio Manifest.yml  PaperToVideo - Get Audio Slide.yml  PaperToVideo - Get Extracted Content.yml  PaperToVideo - Get Images.yml  PaperToVideo - Get LinkedIn Draft.yml  PaperToVideo - Get Papers.yml  PaperToVideo - Get Run Status.yml  PaperToVideo - Get Script.yml  PaperToVideo - Get Slides.yml  PaperToVideo - Get Twitter Draft.yml  PaperToVideo - Retry Run.yml  PaperToVideo - SSE Stream.yml  PaperToVideo - Stream Video.yml  PaperToVideo - Trigger LinkedIn Draft.yml  folder.bru  (+3 more)
backend/app/: config.py  database.py  firebase.py  main.py
backend/examples/: pdf_processor_usage.py
backend/gateway/: .air.toml  Dockerfile  go.mod  go.sum  main.go
backend/migrations/: 003_podcast.sql  004_reel.sql  005_metadata_extract.sql  006_slides_pipeline.sql  006_social_drafts.sql  007_checkpoint.sql  008_patent.sql  009_audience_tone.sql  init.sql
backend/prompts/: style_guide.md
backend/tests/: test_podcast_video.py
(+603 files in other folders)
