[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "docling>=2.61.2",
    "fastapi>=0.121.1",
    "firebase-admin>=7.1.0",
    "google-api-python-client>=2.187.0",
    "google-generativeai>=0.8.5",
    "grapheme>=0.6.0",
    "moviepy==1.0.3",
    "patchright>=1.55.2",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "playwright>=1.55.0",
    "pydantic-ai-slim[google]>=1.12.0",
    "pydub>=0.25.1",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.6",
    "pyspellchecker>=0.8.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "sarvamai>=0.1.21",
    "uvicorn[standard]>=0.38.0",
    "camel-ai>=0.2.16",
    "arxiv>=2.1.3",
    "opencv-python-headless>=4.11.0.86",
    "scikit-learn>=1.5.0",
    "CairoSVG>=2.7.1",
    "json-repair>=0.54.2",
    "marker-pdf==0.3.10",
    "deepsearch-glm",
    "torch>=2.0.0",
    "torchvision",
    "Pillow>=10.0.0",
    "tqdm",
    "scipy>=1.13.0",
    "sentence-transformers",
    "transformers>=4.40.0",
    "accelerate",
    "huggingface-hub>=0.20.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "requests",
    "httpx",
    "nest-asyncio",
    "rich",
    "coloredlogs",
    "pypdf",
    "pypandoc",
    "docling-core",
    "docling-ibm-models",
    "docling-parse",
    "marko",
    "openpyxl",
    "matplotlib",
    "pandas",
    "lxml",
    "beautifulsoup4",
    "colorama",
    "jinja2",
    "jsonlines",
    "python-Levenshtein",
    "PyPDF2",
    "pypdfium2",
    "seaborn",
    "tiktoken",
    "PyYAML",
    "tenacity",
    "filetype",
    "pydantic-settings",
    "docstring-parser",
    "jsonschema",
    "sympy",
    "antlr4-python3-runtime",
    "datasets",
    "FlagEmbedding",
    "python-docx",
    "pytesseract",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    "arq",
    "reportlab>=4.0.0",
    "saraldocling[cpu]"
]

[tool.uv.sources]
saraldocling = { git = "https://github.com/DemocratiseResearch/SARALDocling.git", branch = "main", subdirectory = "saraldocling" }
