[project]
name = "saral-pdf-parser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "saral-shared",
    "saraldocling==1.0.1",
    "google-cloud-storage==2.18.0",
    "asyncpg==0.31.0",
    "redis==5.2.1",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
]

[tool.uv.sources]
saral-shared = { path = "../shared", editable = true }
